--- a/.gitignore
+++ b/.gitignore
@@ -123,7 +123,6 @@ fabric.properties
 # Icon must end with two \r
 Icon
 
-
 # Thumbnails
 ._*
 
@@ -489,3 +488,5 @@ pip-selfcheck.json
 ### Sidecar ###
 MODEL
 whisper.cpp
+helper/proto
+app/proto
