--- a/app/app/package.json
+++ b/app/app/package.json
@@ -17,7 +17,15 @@
     "vite-plugin-solid": "^2.8.2"
   },
   "dependencies": {
+    "@kobalte/core": "^0.13.10",
+    "@tailwindcss/vite": "^4.1.10",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "electron": "^36.0.0",
+    "solid-icons": "^1.1.0",
     "solid-js": "^1.9.7",
-    "electron": "^36.0.0"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.10",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
