--- a/app/app/components.json
+++ b/app/app/components.json
@@ -6,7 +6,7 @@
       "path": "src/app.css",
       "variable": true
     },
-    "color": "slate",
+    "color": "gray",
     "prefix": ""
   },
   "alias": {
