--- a/app/app/package.json
+++ b/app/app/package.json
@@ -11,6 +11,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/ws": "^8.18.1",
     "solid-devtools": "^0.29.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
@@ -18,15 +19,20 @@
   },
   "dependencies": {
     "@kobalte/core": "^0.13.10",
+    "@tailwindcss/postcss": "^4.1.10",
     "@tailwindcss/vite": "^4.1.10",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "electron": "^36.0.0",
     "lucide-solid": "^0.515.0",
+    "msr": "^1.3.4",
+    "postcss": "^8.5.6",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.9.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^3.4.17",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss": "^4.1.10",
+    "tailwindcss-animate": "^1.0.7",
+    "ws": "^8.18.2"
   }
 }
