--- a/client/app/package.json
+++ b/client/app/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.518.0",
+    "motion": "^12.18.1",
     "react": "^19.1.0",
     "react-activation": "^0.13.4",
     "react-dom": "^19.1.0",
