--- a/client/app/package.json
+++ b/client/app/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-router-devtools": "^1.121.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.518.0",
     "motion": "^12.18.1",
     "react": "^19.1.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@tanstack/router-plugin": "^1.121.27",
+    "@types/lodash": "^4.17.18",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
